--- a/src/lottery.css
+++ b/src/lottery.css
@@ -27,8 +27,8 @@
 	}
 
 	.dh-icon > svg {
-		height: 64px;
-		width: 64px;
+		height: 32px;
+		width: 32px;
 		color: #FFC825;
 		margin: 18px;
 	}
@@ -47,15 +47,15 @@
 
 	.dh-icon-crown > svg {
 		margin: 8px;
-		height: 200px;
-		width: 120px;
+		height: 120px;
+		width: 72px;
 	}
 	.is-mac .button .dh-icon {
 		font-size: 58px;
 	}
 
 	.is-mac .dh-icon {
-		font-size: 80px;
+		font-size: 30px;
 	}
 	.is-mac .dh-icon > svg {
 		display: none;
@@ -114,8 +114,8 @@
 .dh-lottery .avatar .image {
 	margin: 0 auto;
 	display: inline-block;
-	height: 128px;
-  width: 128px;
+	height: 32px;
+  width: 32px;
   position: relative;
 }
 
@@ -133,8 +133,8 @@
 	border: 4px solid #FFF;
 	border-radius: 100%;
 	box-sizing: content-box;
-	height: 128px;
-	width: 128px;
+	height: 32px;
+	width: 32px;
 	/*box-shadow: 0 0 100px 3000px rgba(10, 10, 10, 0.3);*/
 }
 
@@ -200,7 +200,16 @@
     flex-grow: 1;
     -ms-flex-negative: 1;
     flex-shrink: 1;
-    padding: 1vw;
+    padding: 8px;
+}
+
+.dh-modal-prizename{
+	clear: both;
+	color: yellow;
+	font-size: 80px;
+	text-align: center;
+	position: absolute;
+	bottom: 20px;
 }
 
 .dh-modal-close{
@@ -321,7 +330,7 @@
 	font-size: 50px;
 	padding: 2vh 5%;
 	text-align: left;
-	min-height: 2.5em;
+	min-height: 1em;
 }
 
 .dh-modal-content.dh-solowinner .profile-item{
@@ -335,13 +344,13 @@
 }
 
 .dh-modal-content.dh-morewinner .profile-item{
-	width: 50%;
+	width: 30%;
   float: left;
   box-sizing: border-box;
 }
 
 .dh-modal-content .avatar-image{
-	float: left;
+	/* float: left; */
 	position: relative;
   margin-right: 5%;
   width: 256px;
@@ -349,8 +358,8 @@
 }
 
 .dh-modal-content.dh-morewinner .avatar-image{
-  width: 142px;
-  height: 142px;
+  width: 64px;
+  height: 64px;
 }
 
 .dh-modal-content .avatar-image>h1 {
@@ -381,19 +390,19 @@
 }
 
 .dh-modal-content .profile-name {
-	font-size: 1em;
+	font-size: 30px;
 	color: #eee;
 	margin: 0 0 16px 0;
 	font-weight: 600;
 	overflow: hidden;
 	text-overflow:ellipsis;
 	white-space: nowrap;
-	min-height: 80px;
+	min-height: 40px;
 }
 
 .dh-modal-content .profile-subtitle {
 	color: #ddd;
-	font-size: 0.75em;
+	font-size: 20px;
 	margin: 12px 0;
 	font-weight: 600;
 	overflow: hidden;
@@ -460,8 +469,15 @@
 	border-radius: 100%;
 }
 
+#dh-lottery-history .dh-history-item .dh-history-user a{
+	color: #fff;
+	text-decoration: none;
+}
+
 .dh-history-user .avatar .avatar-image{
-  float: none;
+	float: none;
+	width: 64px;
+	height: 64px;
 }
 
 .dh-modal-btn{
@@ -554,4 +570,11 @@
 .dh-animated {
   animation-duration: 0.4s;
   animation-fill-mode: both;
+}
+
+.PrizeStatus{
+	text-align: center;
+	color: #fff;
+	margin-top: 10px;
+
 }
